Trying to resolve a bug on iPhone X

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ body {
 /* MEDIA BREAKPOINTS */
 @media (max-width: 576px) {
     #bgButton i {
-        margin: 0;
+        margin-right: 3rem;
     }
 }
 
@@ -142,7 +142,6 @@ body {
 
     .topnav-right {
         margin-bottom: .5rem;
-        padding-right: .5rem;
     }
 }
 
